Packetize the restore upload
Add place value to scoresheet csv file
Better error handling  on file operations

--- a/views/coach.ejs
+++ b/views/coach.ejs
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
-<!-- Next: Put in another line so that the JV and Varsity team scores are computed DONE -->
-<!-- Remaining Steps:
-1. Finish the css code to lay out the coach entry page completely, move down the Varsity and JV labels DONE
-2. Turn the html code into ejs code, making the dropdowns functional DONE
-3. Add functionality to the score boxes and the buttons DONE
-4. Add a way for coaches to manage their team roster. Change data structure to separate first, 
-middle, last names (functionality only, see step 9) DONE
-5. Make an administrator login with controls to open/close each entry for every or for specific coaches, 
-and to see who has entered data yet (functionality only, see step 9) DONE
-5.5 Clean up and document all code, and upload to github DONE
-6. Research providers of free virtual servers. Select and sign up for a service DONE
-12. Make Administrator function to clear out a contest and set up the next contest
-8. Give the administrator the option of turning on the team-contest mode. Write the corresponding code in coach.ejs.
-
-11. Find a way to send the server data to a Google Sheet (Google API?)
-13. Deliver a score sheet to the coach--What file format will it be? Mary Kay's idea about giving raw data to play with
-**************************************************Validate and deploy by 1 Sep, 2025
-9. Review the existing CSS and extend the CSS to the other three pages (login, 
+<!-- 
+Still to do:
+Review the existing CSS and extend the CSS to the other three pages (login, 
 admin, roster management), making a common color and font and button scheme and using the same header and footer.
-7. database work--cancelled
-10. Research https and good security practices
-
-Optional
-Error-handling improvements -->
+Research https and good security practices
+Error-handling improvements 
+Button for downloading image of scoresheet (and/or HTML code)
+Use pop-ups for statistician options so that auto-backup doesn't need restarting
+-->
 
 <html lang="en">
     <head>
