--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Central Jersey Math League</h1>
-    <h2>Coaches can log in below for contest <%=status.contestNumber%></h2>
+    <h2>Coaches can log in below for contest <%=contestStatus.contestNumber%></h2>
     <br />
-    <h3>Venue: <%=status.hostSchool%>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Date: <%=status.contestDate%></h3>
+    <h3>Venue: <%=contestStatus.hostSchool%>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Date: <%=contestStatus.contestDate%></h3>
     <br />
     <br />
     <br />
