Improve user experience
Based on feedback from volunteer testers:
-Roster additions made on scoresheet are entered within the context of the scoresheet names
-Temporary names are eliminated so that the placeholder prompts can be seen
-All names are displayed with the last name first, since that is how the alphabetization is done
-Roster lists and the control buttons for editing them are left-justified in centered tables
-Code to prevent either adding a student, editing a student, or seating a new student, with the same name as an existing student (including deleted ones)
-Submit buttons are consistently on top
-Some submit buttons are extra large, to prevent them from going unnoticed and unused
-Autobackups start on load of the statistician page
-Coaches are prompted to change their password away from "CJML"

--- a/public/coach.css
+++ b/public/coach.css
@@ -5,6 +5,18 @@ body {
     font-family: Arial;
 }
 
+.left-aligned {
+    text-align: left;
+    white-space: nowrap;
+    width: 1px;
+}
+
+.narrow-table{
+    white-space: nowrap;
+    width: 1px;
+    display: inline-table;
+}
+
 p {
     margin: 0;
 }
@@ -41,11 +53,19 @@ h2 {
     padding: 1em;
 }
 
-.obuttonbar {
+.obuttonbar{
     position: relative;
     width: 95%;
     max-width: 21.5cm;
     min-height: 20px;
+    margin: auto;
+}
+
+.specialbuttonbar {
+    position: relative;
+    width: 95%;
+    max-width: 21.5cm;
+    min-height: 100px;
     margin: auto;
 }
 
@@ -77,6 +97,10 @@ button {
     background-color: rgb(240, 51, 51);
     color: white;
     border-radius: 4px;
+}
+
+.submitButton {
+    font-size: 24pt;
 }
 
 button:disabled {
