--- a/views/rosteredit.ejs
+++ b/views/rosteredit.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Roster</title>
+    <title><%=coachSchool%></title>
     <link rel="stylesheet" href="/coach.css">
 </head>
 <body>
@@ -20,52 +20,64 @@
         alphaStudents.splice(deleteIndices[j],1);
     }
     %>
-    <h1>Edit the student names in the fields below, then click "Done".</h1>
+    <h1>Student Roster, <%=coachSchool%></h1>
+    <h2>Edit the student names in the fields below, then click "Save Changes".</h2>
     <form action="/roster" method="POST" id="neverMindForm">
         <input type="checkbox" checked="checked" class="invisible" name="coachId" value="<%=coachId%>" />
         <input type="checkbox" checked="checked" class="invisible" name="session" value="<%=session%>" />
+        <input type="checkbox" checked="checked" class="invisible" name="namePushed" value="<%=namePushed%>" />
     </form>
     <!-- The form below has one of two endpoints, chosen based on whether the user
      is coming from roster.ejs or coach.ejs. -->
-    <%if (returnToCoach) {%>
-        <form action="/coach" method="POST">
-        <%var requestType = "newStudents";%>
-    <%}else{%>
-        <form action="/roster" method="POST">
-        <%var requestType = "changeStudent"%>
-    <%}%>
+    <form action="/roster" method="POST">
         <input type="checkbox" checked="checked" class="invisible" 
             name="coachId" value="<%=coachId%>" />
         <input type="checkbox" checked="checked" class="invisible" 
             name="session" value="<%=session%>" />
-        <% var numChangedStuds = 0;%>
-        <% alphaStudents.forEach((stud)=>{%>
-            <p> 
-                <%if(needNames.includes(stud.iD)) {%>
-                    <%numChangedStuds++;%>
-                    <input type="checkbox" checked="checked" class="invisible"
-                        name="<%='studentId'+numChangedStuds%>" value="<%=stud.iD%>" />
-                    <input type="text" name="<%='first'+numChangedStuds%>" value="<%=stud.first%>" />
-                    <input type="text" name="<%='middle'+numChangedStuds%>" value="<%=stud.middle%>" />
-                    <input type="text" name="<%='last'+numChangedStuds%>" value="<%=stud.last%>" />
-                <%} else {%>
-                    <%=stud.fullName%>
-                <%}%>
-            </p>
-        <%});%>
+        <input type="checkbox" checked="checked" class="invisible" 
+            name="namePushed" value="<%=namePushed%>" />
         <div class="horizontalchildren">
-            <input type="checkbox" checked="checked" class="invisible"
-                name="numAddedStuds" value="<%=numChangedStuds%>" />
-            <button type="submit" name="requestType" value="<%=requestType%>">
-                Done
+            <button type="submit" name="requestType" value="changeStudent" class="submitButton">
+                Save Changes
             </button>
-            <%if(!(returnToCoach)) {%>
-                <button type="submit" form="neverMindForm"
-                    name="requestType" value="manageRoster">
-                    Cancel
-                </button>
-            <%}%>
+            <button type="submit" form="neverMindForm" 
+                    name="requestType" value= "<% if (namePushed) { %>neverMind<%} else { %>manageRoster<%}%>">
+                Cancel
+            </button>
         </div>
+        <table class="narrow-table">
+            <tbody>
+                <% alphaStudents.forEach((stud)=>{%>
+                    <tr>
+                        <%if(needName == stud.iD) {%>
+                            <td class="left-aligned">
+                                <input type="checkbox" checked="checked" class="invisible"
+                                        name="studentId" value="<%=stud.iD%>" />
+                                <input type="text" name="last" value="<%=stud.last%>" id="focusHere"
+                                        placeholder="Lastname" required />
+                            </td>
+                            <td class="left-aligned"><input type="text" name="first" value="<%=stud.first%>"
+                                    placeholder="Firstname" required /></td>
+                            <td class="left-aligned"><input type="text" name="middle" value="<%=stud.middle%>" 
+                                    placeholder="Middle (optional)"/></td>
+                        <%} else {%>
+                            <td class="left-aligned"><p><%=stud.last + ", "%></p></td>
+                            <td class="left-aligned"><p><%=stud.first + " "%></p></td>
+                            <td class="left-aligned"><p><%=stud.middle%></p></td>
+                        <%}%>
+                    </tr>
+                <%});%>
+            </tbody>
+        </table>
     </form>
+    <% if (locals.errorMsg) { %>
+        <p id="errorMsg" class="invisible"><%=errorMsg%></p>
+        <script>
+                alert(document.getElementById("errorMsg").innerText);
+        </script>
+    <%}%>
+    <script>
+        document.getElementById("focusHere").focus();
+    </script>
 </body>
 </html>
