--- a/views/statistician.ejs
+++ b/views/statistician.ejs
@@ -79,6 +79,9 @@
                         <button id="beginAutoBackups">
                             Begin auto-backups
                         </button>
+                        <button type="submit" id="downBack2" form="statform" name="requestType" value="downloadBackup">
+                            Download backup data and stop autobackup
+                        </button>
                     </div>
                     <div>
                         <button type="submit" form="manageTeamsForm" 
@@ -102,7 +105,7 @@
                                     name="requestType" value="downloadPasteable">
                                 Download contest data
                             </button>
-                            <button type="submit" id="downBack" form="statform"
+                            <button type="submit" id="downBack1" form="statform"
                                     name="requestType" value="downloadBackup">
                                 Download backup data and stop autobackup
                             </button>
@@ -125,7 +128,7 @@
                                     name="requestType" value="downloadPasteable">
                                 Download contest data
                             </button>
-                            <button type="submit" id="downBack" class="invisible" form="statform"
+                            <button type="submit" id="downBack1" class="invisible" form="statform"
                                     name="requestType" value="downloadBackup">
                                 Download backup data and stop autobackup
                             </button>
