--- a/views/roster.ejs
+++ b/views/roster.ejs
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Roster</title>
+    <title><%=coachSchool%></title>
     <link rel="stylesheet" href="/coach.css">
 </head>
+
 <body>
     <!-- determine the list of deleted students -->
     <% 
-    var deletedStudents = [];
-    let deleteIndices=[];
-    alphaStudents.forEach((student)=>{  
-        if(student.last.startsWith("!")){
-            var idx = alphaStudents.findIndex((a)=>{return (a.iD == student.iD)});
-            deleteIndices.push(idx);
-            deletedStudents.push(student);
+        var deletedStudents=[]; let deleteIndices=[]; alphaStudents.forEach((student)=>{
+            if(student.last.startsWith("!")){
+                var idx = alphaStudents.findIndex((a)=>{return (a.iD == student.iD)});
+                deleteIndices.push(idx);
+                deletedStudents.push(student);
+            }
+        });
+        for(var j=deleteIndices.length-1; j>=0; j--){
+            alphaStudents.splice(deleteIndices[j],1);
         }
-    });
-    for(var j=deleteIndices.length-1; j>=0; j--){
-        alphaStudents.splice(deleteIndices[j],1);
-    }
     %>
+        <h1>Student Roster, <%=coachSchool%></h1>
+        <form action="/coach" method="post" id="tocoachpage">
+            <input type="checkbox" checked="checked" class="invisible" name="coachId" value="<%=coachId%>" />
+            <input type="checkbox" checked="checked" class="invisible" name="session" value="<%=session%>" />
+            <button type="submit" name="requestType" value="readOnly">
+                Back to scoresheet
+            </button>
+        </form>
+        <form action="/rosterundelete" method="post">
+            <input type="checkbox" checked="checked" name="coachId" value="<%=coachId%>" class="invisible">
+            <input type="checkbox" checked="checked" name="session" value="<%=session%>" class="invisible">
+            <button type="submit" name="requestType" value="unDelete">
+                Undelete
+            </button>
+        </form>
+        <form action="/rosteredit" method="post">
+            <input type="checkbox" checked="checked" class="invisible" name="coachId" value="<%=coachId%>" />
+            <input type="checkbox" checked="checked" class="invisible" name="session" value="<%=session%>" />
+            <button type="submit" name="requestType" value="addStudent">
+                Add a Student
+            </button>
+            <table class="narrow-table">
+                <tbody>
+                    <% alphaStudents.forEach((stud)=>{%>
+                        <tr>
+                            <td class="left-aligned">
+                                <%=stud.fullName%>
+                            </td>
+                            <td class="left-aligned">
+                                <button type="submit" name="requestType" value="<%="editStudent"+stud.iD%>">
+                                    Edit
+                                </button>
+                            </td>
+                            <td class="left-aligned">
+                                <button type="submit" form="torosterpage" 
+                                        name="requestType" value="<%='deleteStudent'+stud.iD%>">
+                                    Delete
+                                </button>
+                            </td>
+                        </tr>
+                    <%});%>
+                </tbody>
+            </table>
+        </form>
+        <form action="/roster" method="post" id="torosterpage">
+            <input type="checkbox" checked="checked" class="invisible" name="coachId" value="<%=coachId%>" />
+            <input type="checkbox" checked="checked" class="invisible" name="session" value="<%=session%>" />
+        </form>
+    </body>
 
-    <h1>Student Roster</h1>
-    <form action="/rosterundelete" method="post">
-        <input type="checkbox" checked="checked" name="coachId" value="<%=coachId%>" class="invisible">
-        <input type="checkbox" checked="checked" name="session" value="<%=session%>" class="invisible">
-        <button type="submit" name="requestType" value="unDelete">
-            Undelete
-        </button>
-    </form>
-    <form action="/rosteredit" method="post">
-        <input type="checkbox" checked="checked" class="invisible"
-            name="coachId" value="<%=coachId%>" />
-        <input type="checkbox" checked="checked" class="invisible"
-            name="session" value="<%=session%>" />
-        <button type="submit" 
-            name="requestType" value="addStudent">
-            Add a Student
-        </button>
-        <% alphaStudents.forEach((stud)=>{%>
-            <p><%=stud.fullName%> 
-                <button type="submit"
-                    name="requestType" value="<%="editStudent"+stud.iD%>">
-                    Edit
-                </button>
-                <button type="submit" form="torosterpage" 
-                    name="requestType" value="<%="deleteStudent"+stud.iD%>">
-                    Delete
-                </button>
-            </p>
-        <%});%>
-    </form>
-    <form action="/roster" method="post" id="torosterpage">
-        <input type="checkbox" checked="checked" class="invisible"
-        name="coachId" value="<%=coachId%>" />
-        <input type="checkbox" checked="checked" class="invisible" 
-            name="session" value="<%=session%>" />
-    </form>
-    <form action="/coach" method="post" id="tocoachpage">
-        <input type="checkbox" checked="checked" class="invisible" 
-            name="coachId" value="<%=coachId%>" />
-        <input type="checkbox" checked="checked" class="invisible" 
-            name="session" value="<%=session%>" />
-        <button type="submit" 
-            name="requestType" value="readOnly">
-            Done
-        </button>
-    </form>
-</body>
 </html>
