Fix comma problem in csv output
When a "lastname, firstname" field is included in a csv output it is enclosed in quotation marks.
CSS code "touch-action: manipulation" is applied to all buttons so that they won't unintentionally zoom on iOS devices.
Add enter-key listeners for some of the submit buttons
Fix an error in a paste-able output so that team contests have the correct values indicating team participation.

--- a/public/coach.css
+++ b/public/coach.css
@@ -97,6 +97,7 @@ button {
     background-color: rgb(240, 51, 51);
     color: white;
     border-radius: 4px;
+    touch-action: manipulation;
 }
 
 .submitButton {
