Tweak user experience
Remove a colon in the scoresheet seat number that messes up the formatting in Excel
Remove the instruction on the dropdown menu that shows when a seat is empty, to make it more easy to see which seats are empty
Remove a comma following a last name when the last, first and middle are each in their own column of a table with visible boundaries

--- a/views/addstudents.ejs
+++ b/views/addstudents.ejs
@@ -45,7 +45,7 @@
                         <p>
                             <td><%=j+1%></td>
                             <%if (locals.scoreSheetRows[j]){%>
-                                <td class="left-aligned"><%=locals.scoreSheetRows[j].last+','%></td>
+                                <td class="left-aligned"><%=locals.scoreSheetRows[j].last%></td>
                                 <td class="left-aligned"><%=locals.scoreSheetRows[j].first%></td>
                                 <td class="left-aligned"><%=locals.scoreSheetRows[j].middle%></td>
                             <%} else {%>
