--- a/views/rosteredit.ejs
+++ b/views/rosteredit.ejs
@@ -61,8 +61,8 @@
                             <td class="left-aligned"><input type="text" name="middle" value="<%=stud.middle%>" 
                                     placeholder="Middle (optional)"/></td>
                         <%} else {%>
-                            <td class="left-aligned"><p><%=stud.last + ", "%></p></td>
-                            <td class="left-aligned"><p><%=stud.first + " "%></p></td>
+                            <td class="left-aligned"><p><%=stud.last%></p></td>
+                            <td class="left-aligned"><p><%=stud.first%></p></td>
                             <td class="left-aligned"><p><%=stud.middle%></p></td>
                         <%}%>
                     </tr>
